src/objects/CallDetails__c.object
<CustomObject>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call_Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadId__c</fullName>
        <label>LeadId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>accountName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CallDetails</relationshipLabel>
        <relationshipName>CallDetails1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>callId__c</fullName>
        <label>callId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>campaignId__c</fullName>
        <label>campaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clearTripName__c</fullName>
        <label>clearTripName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactName__c</fullName>
        <label>contactName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerCRTId__c</fullName>
        <label>customerCRTId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dialedNumber__c</fullName>
        <label>dialedNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dispositionClass__c</fullName>
        <label>dispositionClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dispositionCode__c</fullName>
        <label>dispositionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>leadName</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CallDetails</relationshipLabel>
        <relationshipName>CallDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>objectId__c</fullName>
        <label>objectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objectType__c</fullName>
        <label>objectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordingFileUrl__c</fullName>
        <label>recordingFileUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemDisposition__c</fullName>
        <label>systemDisposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userCrtObjectId__c</fullName>
        <label>userCrtObjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userId__c</fullName>
        <label>userId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CallDetails</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CallDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CallDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>